# alpina_bot_builder

./: .gitattributes  .gitignore  README.md  bot_runner.py  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/workflows/: build.yml
api/: crypto.py  gigachat_client.py  models.py  telegram_bot.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_scenario_options_alter_step_options_bot_owner_and_more.py  0002_alter_step_next_step_id.py  0003_alter_scenario_bot.py
bot_builder/: log_filters.py  pipeline.py  settings.py  urls.py
templates/: home.html
templates/bots/: form.html  list.html
templates/scenarios/: form.html  list.html
templates/steps/: form.html  list.html
