[project]
name = "alpina-bot-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",
    "autopep8>=2.3.2",
    "cryptography>=46.0.4",
    "django==5.2.7",
    "djangorestframework>=3.16.1",
    "gigachat>=0.2.0",
    "gunicorn>=24.1.1",
    "psycopg2-binary>=2.9.11",
    "python-telegram-bot>=22.6",
]
